# googleTestCppMacOs

./: .gitignore  CMakeLists.txt  README.md
src/app/: main.cpp
src/test/: CalcTest.cpp
